      read in at one time (11/4/16)
    - fix bug in which reading format 4 sequentially will process dictionary event as
      a regular event instead of reading it specially.

    - MAJOR CHANGE: when writing, an ending block header is NOT written with each
      event and then overwritten in the next write. This removes the possibility that
      a disk head wastes a whole revolution getting into position for the backwards
      file access.

    - fix bug in which reading a file sequentially, in which the last event is not fully
      written, can cause an infinite read loop

    - fix bug in which writing events to a buffer can cause the block headers to start
      numbering at 0, not 1.

*********************************************************************************
C CODE

evio-4.3.3

    - fix flags for Mac OSX compilation (9/22/2014)

evio-4.4

    - fix performance problem writing files.
      No longer force a written event to physical disk. (10/7/14)
    - fix bug in C lib that miswrites 6th word of block header - event type (11/5/14)

evio-4.4.4
    - fix bug in C++ that does not set padding correctly
    - fix lots of compiler warnings

evio-4.4.5
    - fix problems compiling on Mac

******** NEW VERSION MAJOR VERSION *********
evio-5.0
    - fix small bugs
    - allow smaller split files
    - add capability to add 1 "first event" to beginning of each file including splits
    - add a routine, evCreateFirstEventBlock(), to create an evio file format block
      containing a first event. Added to facilitate an evio C lib user sending an ET
      event or cMsg msg containing this block to the ER which would, in turn, properly
      understand it to be a first event to be included in each split file.
    - make more swapping routines & macros available
    - better doxygen doc
    - fix bug in which the version # was improperly set to 5 (set back to 4) since
      that version number refers to the evio file format version and not the package